# cookiecutter-data-science

./: README.rst  cookiecutter.json  setup.py
{{cookiecutter.project_slug}}/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/src/: cli.py  config.py  logger.py  train.py
{{cookiecutter.project_slug}}/src/data/: data_loader.py  training_data.py  transformers.py
{{cookiecutter.project_slug}}/src/modelling/: estimator.py
{{cookiecutter.project_slug}}/src/serialization/: serializers.py
